<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="10dp">

	<TextView
		android:id="@+id/register_message_txt"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textColor="@android:color/holo_red_dark"
		android:textAlignment="center"
		app:layout_constraintBottom_toTopOf="@id/register_password_edit_text"
		app:layout_constraintTop_toTopOf="parent"/>

	<EditText
		android:id="@+id/register_name_edit_text"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:hint="@string/name"
		app:layout_constraintBottom_toTopOf="@id/register_mail_edit_text"/>

	<EditText
		android:id="@+id/register_mail_edit_text"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:hint="@string/mail"
		app:layout_constraintBottom_toTopOf="@id/register_password_edit_text"/>

	<EditText
		android:id="@+id/register_password_edit_text"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:hint="@string/password"
		android:inputType="textPassword"
		app:layout_constraintBottom_toTopOf="@id/register_confirm_password_edit_text"/>

	<EditText
		android:id="@+id/register_confirm_password_edit_text"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:hint="@string/confirm_password"
		android:inputType="textPassword"
		app:layout_constraintBottom_toTopOf="@id/register_btn"/>

	<Button
		android:id="@+id/register_btn"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/register"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>